--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -92,7 +92,7 @@
           <h3>Contacto</h3>
           <p></p>
           <div id="message"></div>
-          <form method="post" action="/sendemail" >
+          <form method="post" action="sendemail" >
             <input name="name" id="name" type="text" class="col-xs-12 col-sm-12 col-md-12 col-lg-12"
               placeholder="Nombre...">
             <input name="email" id="email" type="email" class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 noMarr"
