--- a/app/assets/stylesheets/responsive.css
+++ b/app/assets/stylesheets/responsive.css
@@ -91,6 +91,7 @@
  .testimonials p {
  font-size: 12px;
 }
+}
 @media screen and (max-width: 480px) {
  .banner-text {
  padding-top: 45%;
@@ -100,6 +101,7 @@
 }
  .testimonials p {
  font-size: 12px;
+}
 }
 @media screen and (max-width: 320px) {
  .banner-text {
